[gd_scene load_steps=14 format=4 uid="uid://b2u0qfsldi58r"]

[ext_resource type="Texture2D" uid="uid://co8ldj03mdnpt" path="res://Tilemaps/tilesets-16x16.png" id="1_ci6au"]
[ext_resource type="Script" uid="uid://upbj8v3lk84i" path="res://Code/barrasemanal.gd" id="2_myvm1"]
[ext_resource type="Script" uid="uid://dv7651hwk7ie0" path="res://Code/Parcela1.gd" id="3_np2xp"]
[ext_resource type="Texture2D" uid="uid://cxa8kv5jc5rm3" path="res://Images/empty_progress_bar.png" id="4_w7jjh"]
[ext_resource type="Texture2D" uid="uid://pc1blopj17r4" path="res://Images/full_progress_bar.png" id="5_6q3n4"]
[ext_resource type="Texture2D" uid="uid://cpuw7aqyod1qa" path="res://Images/oruga.png" id="6_4c2oa"]
[ext_resource type="Texture2D" uid="uid://5xuxy3a3irgf" path="res://Images/full_progress_life_bar.png" id="6_6q3n4"]
[ext_resource type="Script" uid="uid://drd2u0h77sxc1" path="res://Code/logica.gd" id="6_w7jjh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_26yhd"]
texture = ExtResource("1_ci6au")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_6maiu"]
sources/2 = SubResource("TileSetAtlasSource_26yhd")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p3ir5"]
texture = ExtResource("1_ci6au")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_eibdt"]
sources/1 = SubResource("TileSetAtlasSource_p3ir5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_np2xp"]
size = Vector2(65.35947, 84.50706)

[node name="Mapa" type="Node2D"]
position = Vector2(113, 0)
scale = Vector2(0.765, 0.994)

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAABAAAAAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAACAAAAAgAAAAAAAAACAAEAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAAAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAAAABAAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAABAA0AAgAAAAAAAAABAA4AAgAAAAAAAAABAA8AAgAAAAAAAAABABAAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAACAAoAAgAAAAAAAAACAAsAAgAAAAAAAAACAAwAAgAAAAAAAAACAA0AAgAAAAAAAAACAA4AAgAAAAAAAAACAA8AAgAAAAAAAAACABAAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAADAAoAAgAAAAAAAAADAAsAAgAAAAAAAAADAAwAAgAAAAAAAAADAA0AAgAAAAAAAAADAA4AAgAAAAAAAAADAA8AAgAAAAAAAAADABAAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAsAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAAEAA4AAgAAAAAAAAAEAA8AAgAAAAAAAAAEABAAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAAAAAAFAA0AAgAAAAAAAAAFAA4AAgAAAAAAAAAFAA8AAgAAAAAAAAAFABAAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAsAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA0AAgAAAAAAAAAGAA4AAgAAAAAAAAAGAA8AAgAAAAAAAAAGABAAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAHAAoAAgAAAAAAAAAHAAsAAgAAAAAAAAAHAAwAAgAAAAAAAAAHAA0AAgAAAAAAAAAHAA4AAgAAAAAAAAAHAA8AAgAAAAAAAAAHABAAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA0AAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA8AAgAAAAAAAAAIABAAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAJAAsAAgAAAAAAAAAJAAwAAgAAAAAAAAAJAA0AAgAAAAAAAAAJAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA0AAgAAAAAAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAAAAAAKABAAAgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAALAAwAAgAAAAAAAAALAA0AAgAAAAAAAAALAA4AAgAAAAAAAAALAA8AAgAAAAAAAAALABAAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAsAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAAMAA4AAgAAAAAAAAAMAA8AAgAAAAAAAAAMABAAAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAANAAoAAgAAAAAAAAANAAsAAgAAAAAAAAANAAwAAgAAAAAAAAANAA0AAgAAAAAAAAANAA4AAgAAAAAAAAANAA8AAgAAAAAAAAANABAAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA0AAgAAAAAAAAAOAA4AAgAAAAAAAAAOAA8AAgAAAAAAAAAOABAAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAAwAAgAAAAAAAAAPAA0AAgAAAAAAAAAPAA4AAgAAAAAAAAAPAA8AAgAAAAAAAAAPABAAAgAAAAAAAAAQAAAAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAcAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAsAAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA0AAgAAAAAAAAAQAA4AAgAAAAAAAAAQAA8AAgAAAAAAAAAQABAAAgAAAAAAAAARAAAAAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAMAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAARAAoAAgAAAAAAAAARAAsAAgAAAAAAAAARAAwAAgAAAAAAAAARAA0AAgAAAAAAAAARAA4AAgAAAAAAAAARAA8AAgAAAAAAAAARABAAAgAAAAAAAAASAAAAAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAASAAoAAgAAAAAAAAASAAsAAgAAAAAAAAASAAwAAgAAAAAAAAASAA0AAgAAAAAAAAASAA4AAgAAAAAAAAASAA8AAgAAAAAAAAASABAAAgAAAAAAAAATAAAAAgAAAAAAAAATAAEAAgAAAAAAAAATAAIAAgAAAAAAAAATAAMAAgAAAAAAAAATAAQAAgAAAAAAAAATAAUAAgAAAAAAAAATAAYAAgAAAAAAAAATAAcAAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAATAAoAAgAAAAAAAAATAAsAAgAAAAAAAAATAAwAAgAAAAAAAAATAA0AAgAAAAAAAAATAA4AAgAAAAAAAAATAA8AAgAAAAAAAAATABAAAgAAAAAAAAAUAAAAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAwAAgAAAAAAAAAUAA0AAgAAAAAAAAAUAA4AAgAAAAAAAAAUAA8AAgAAAAAAAAAUABAAAgAAAAAAAAAVAAAAAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAcAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAwAAgAAAAAAAAAVAA0AAgAAAAAAAAAVAA4AAgAAAAAAAAAVAA8AAgAAAAAAAAAVABAAAgAAAAAAAAAWAAAAAgAAAAAAAAAWAAEAAgAAAAAAAAAWAAIAAgAAAAAAAAAWAAMAAgAAAAAAAAAWAAQAAgAAAAAAAAAWAAUAAgAAAAAAAAAWAAYAAgAAAAAAAAAWAAcAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAkAAgAAAAAAAAAWAAoAAgAAAAAAAAAWAAsAAgAAAAAAAAAWAAwAAgAAAAAAAAAWAA0AAgAAAAAAAAAWAA4AAgAAAAAAAAAWAA8AAgAAAAAAAAAWABAAAgAAAAAAAAAXAAAAAgAAAAAAAAAXAAEAAgAAAAAAAAAXAAIAAgAAAAAAAAAXAAMAAgAAAAAAAAAXAAQAAgAAAAAAAAAXAAUAAgAAAAAAAAAXAAYAAgAAAAAAAAAXAAcAAgAAAAAAAAAXAAgAAgAAAAAAAAAXAAkAAgAAAAAAAAAXAAoAAgAAAAAAAAAXAAsAAgAAAAAAAAAXAAwAAgAAAAAAAAAXAA0AAgAAAAAAAAAXAA4AAgAAAAAAAAAXAA8AAgAAAAAAAAAXABAAAgAAAAAAAAAYAAAAAgAAAAAAAAAYAAEAAgAAAAAAAAAYAAIAAgAAAAAAAAAYAAMAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAUAAgAAAAAAAAAYAAYAAgAAAAAAAAAYAAcAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAkAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAsAAgAAAAAAAAAYAAwAAgAAAAAAAAAYAA0AAgAAAAAAAAAYAA4AAgAAAAAAAAAYAA8AAgAAAAAAAAAYABAAAgAAAAAAAAAZAAAAAgAAAAAAAAAZAAEAAgAAAAAAAAAZAAIAAgAAAAAAAAAZAAMAAgAAAAAAAAAZAAQAAgAAAAAAAAAZAAUAAgAAAAAAAAAZAAYAAgAAAAAAAAAZAAcAAgAAAAAAAAAZAAgAAgAAAAAAAAAZAAkAAgAAAAAAAAAZAAoAAgAAAAAAAAAZAAsAAgAAAAAAAAAZAAwAAgAAAAAAAAAZAA0AAgAAAAAAAAAZAA4AAgAAAAAAAAAZAA8AAgAAAAAAAAAZABAAAgAAAAAAAAAaAAAAAgAAAAAAAAAaAAEAAgAAAAAAAAAaAAIAAgAAAAAAAAAaAAMAAgAAAAAAAAAaAAQAAgAAAAAAAAAaAAUAAgAAAAAAAAAaAAYAAgAAAAAAAAAaAAcAAgAAAAAAAAAaAAgAAgAAAAAAAAAaAAkAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAsAAgAAAAAAAAAaAAwAAgAAAAAAAAAaAA0AAgAAAAAAAAAaAA4AAgAAAAAAAAAaAA8AAgAAAAAAAAAaABAAAgAAAAAAAAAbAAAAAgAAAAAAAAAbAAEAAgAAAAAAAAAbAAIAAgAAAAAAAAAbAAMAAgAAAAAAAAAbAAQAAgAAAAAAAAAbAAUAAgAAAAAAAAAbAAYAAgAAAAAAAAAbAAcAAgAAAAAAAAAbAAgAAgAAAAAAAAAbAAkAAgAAAAAAAAAbAAoAAgAAAAAAAAAbAAsAAgAAAAAAAAAbAAwAAgAAAAAAAAAbAA0AAgAAAAAAAAAbAA4AAgAAAAAAAAAbAA8AAgAAAAAAAAAbABAAAgAAAAAAAAAcAAAAAgAAAAAAAAAcAAEAAgAAAAAAAAAcAAIAAgAAAAAAAAAcAAMAAgAAAAAAAAAcAAQAAgAAAAAAAAAcAAUAAgAAAAAAAAAcAAYAAgAAAAAAAAAcAAcAAgAAAAAAAAAcAAgAAgAAAAAAAAAcAAkAAgAAAAAAAAAcAAoAAgAAAAAAAAAcAAsAAgAAAAAAAAAcAAwAAgAAAAAAAAAcAA0AAgAAAAAAAAAcAA4AAgAAAAAAAAAcAA8AAgAAAAAAAAAcABAAAgAAAAAAAAAdAAAAAgAAAAAAAAAdAAEAAgAAAAAAAAAdAAIAAgAAAAAAAAAdAAMAAgAAAAAAAAAdAAQAAgAAAAAAAAAdAAUAAgAAAAAAAAAdAAYAAgAAAAAAAAAdAAcAAgAAAAAAAAAdAAgAAgAAAAAAAAAdAAkAAgAAAAAAAAAdAAoAAgAAAAAAAAAdAAsAAgAAAAAAAAAdAAwAAgAAAAAAAAAdAA0AAgAAAAAAAAAdAA4AAgAAAAAAAAAdAA8AAgAAAAAAAAAdABAAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_6maiu")

[node name="Barrasemanal" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 42.0
offset_bottom = 41.0
script = ExtResource("2_myvm1")

[node name="LabelDia" type="Label" parent="Background/Barrasemanal"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 364.53595
offset_top = -0.9999999
offset_right = 434.53595
offset_bottom = 29.0
grow_horizontal = 0
text = "LUNES"

[node name="LabelSemana" type="Label" parent="Background/Barrasemanal"]
layout_mode = 0
offset_left = 7.1503296
offset_top = -1.0
offset_right = 83.15033
offset_bottom = 22.0
scale = Vector2(0.8518741, 0.7243669)
text = "Semana 1"

[node name="Foreground" type="TileMapLayer" parent="."]
position = Vector2(1.3071896, -11.066398)
tile_map_data = PackedByteArray("AAACAAIAAQADAAEAAAACAAMAAQACAAIAAAACAAQAAQACAAIAAAACAAUAAQACAAIAAAACAAYAAQACAAIAAAACAAcAAQADAAIAAAACAAoAAQADAAEAAAACAAsAAQACAAIAAAACAAwAAQACAAIAAAACAA0AAQACAAIAAAACAA4AAQACAAIAAAACAA8AAQADAAIAAAADAAIAAQABAAMAAAADAAMAAQABAAAAAAADAAQAAQABAAAAAAADAAUAAQABAAAAAAADAAYAAQABAAAAAAADAAcAAQABAAEAAAADAAoAAQABAAMAAAADAAsAAQABAAAAAAADAAwAAQABAAAAAAADAA0AAQABAAAAAAADAA4AAQABAAAAAAADAA8AAQABAAEAAAAEAAIAAQABAAMAAAAEAAMAAQABAAAAAAAEAAQAAQABAAAAAAAEAAUAAQABAAAAAAAEAAYAAQABAAAAAAAEAAcAAQABAAEAAAAEAAoAAQABAAMAAAAEAAsAAQABAAAAAAAEAAwAAQABAAAAAAAEAA0AAQABAAAAAAAEAA4AAQABAAAAAAAEAA8AAQABAAEAAAAFAAIAAQABAAMAAAAFAAMAAQABAAAAAAAFAAQAAQABAAAAAAAFAAUAAQABAAAAAAAFAAYAAQABAAAAAAAFAAcAAQABAAEAAAAFAAoAAQABAAMAAAAFAAsAAQABAAAAAAAFAAwAAQABAAAAAAAFAA0AAQABAAAAAAAFAA4AAQABAAAAAAAFAA8AAQABAAEAAAAGAAIAAQAEAAEAAAAGAAMAAQAAAAIAAAAGAAQAAQAAAAIAAAAGAAUAAQAAAAIAAAAGAAYAAQAAAAIAAAAGAAcAAQAEAAIAAAAGAAoAAQAEAAEAAAAGAAsAAQAAAAIAAAAGAAwAAQAAAAIAAAAGAA0AAQAAAAIAAAAGAA4AAQAAAAIAAAAGAA8AAQAEAAIAAAAJAAIAAQADAAEAAAAJAAMAAQACAAIAAAAJAAQAAQACAAIAAAAJAAUAAQACAAIAAAAJAAYAAQACAAIAAAAJAAcAAQADAAIAAAAJAAoAAQADAAEAAAAJAAsAAQACAAIAAAAJAAwAAQACAAIAAAAJAA0AAQACAAIAAAAJAA4AAQACAAIAAAAJAA8AAQADAAIAAAAKAAIAAQABAAMAAAAKAAMAAQABAAAAAAAKAAQAAQABAAAAAAAKAAUAAQABAAAAAAAKAAYAAQABAAAAAAAKAAcAAQABAAEAAAAKAAoAAQABAAMAAAAKAAsAAQABAAAAAAAKAAwAAQABAAAAAAAKAA0AAQABAAAAAAAKAA4AAQABAAAAAAAKAA8AAQABAAEAAAALAAIAAQABAAMAAAALAAMAAQABAAAAAAALAAQAAQABAAAAAAALAAUAAQABAAAAAAALAAYAAQABAAAAAAALAAcAAQABAAEAAAALAAoAAQABAAMAAAALAAsAAQABAAAAAAALAAwAAQABAAAAAAALAA0AAQABAAAAAAALAA4AAQABAAAAAAALAA8AAQABAAEAAAAMAAIAAQABAAMAAAAMAAMAAQABAAAAAAAMAAQAAQABAAAAAAAMAAUAAQABAAAAAAAMAAYAAQABAAAAAAAMAAcAAQABAAEAAAAMAAoAAQABAAMAAAAMAAsAAQABAAAAAAAMAAwAAQABAAAAAAAMAA0AAQABAAAAAAAMAA4AAQABAAAAAAAMAA8AAQABAAEAAAANAAIAAQAEAAEAAAANAAMAAQAAAAIAAAANAAQAAQAAAAIAAAANAAUAAQAAAAIAAAANAAYAAQAAAAIAAAANAAcAAQAEAAIAAAANAAoAAQAEAAEAAAANAAsAAQAAAAIAAAANAAwAAQAAAAIAAAANAA0AAQAAAAIAAAANAA4AAQAAAAIAAAANAA8AAQAEAAIAAAAQAAIAAQADAAEAAAAQAAMAAQACAAIAAAAQAAQAAQACAAIAAAAQAAUAAQACAAIAAAAQAAYAAQACAAIAAAAQAAcAAQADAAIAAAAQAAoAAQADAAEAAAAQAAsAAQACAAIAAAAQAAwAAQACAAIAAAAQAA0AAQACAAIAAAAQAA4AAQACAAIAAAAQAA8AAQADAAIAAAARAAIAAQABAAMAAAARAAMAAQABAAAAAAARAAQAAQABAAAAAAARAAUAAQABAAAAAAARAAYAAQABAAAAAAARAAcAAQABAAEAAAARAAoAAQABAAMAAAARAAsAAQABAAAAAAARAAwAAQABAAAAAAARAA0AAQABAAAAAAARAA4AAQABAAAAAAARAA8AAQABAAEAAAASAAIAAQABAAMAAAASAAMAAQABAAAAAAASAAQAAQABAAAAAAASAAUAAQABAAAAAAASAAYAAQABAAAAAAASAAcAAQABAAEAAAASAAoAAQABAAMAAAASAAsAAQABAAAAAAASAAwAAQABAAAAAAASAA0AAQABAAAAAAASAA4AAQABAAAAAAASAA8AAQABAAEAAAATAAIAAQABAAMAAAATAAMAAQABAAAAAAATAAQAAQABAAAAAAATAAUAAQABAAAAAAATAAYAAQABAAAAAAATAAcAAQABAAEAAAATAAoAAQABAAMAAAATAAsAAQABAAAAAAATAAwAAQABAAAAAAATAA0AAQABAAAAAAATAA4AAQABAAAAAAATAA8AAQABAAEAAAAUAAIAAQAEAAEAAAAUAAMAAQAAAAIAAAAUAAQAAQAAAAIAAAAUAAUAAQAAAAIAAAAUAAYAAQAAAAIAAAAUAAcAAQAEAAIAAAAUAAoAAQAEAAEAAAAUAAsAAQAAAAIAAAAUAAwAAQAAAAIAAAAUAA0AAQAAAAIAAAAUAA4AAQAAAAIAAAAUAA8AAQAEAAIAAAAXAAIAAQADAAEAAAAXAAMAAQACAAIAAAAXAAQAAQACAAIAAAAXAAUAAQACAAIAAAAXAAYAAQACAAIAAAAXAAcAAQADAAIAAAAXAAoAAQADAAEAAAAXAAsAAQACAAIAAAAXAAwAAQACAAIAAAAXAA0AAQACAAIAAAAXAA4AAQACAAIAAAAXAA8AAQADAAIAAAAYAAIAAQABAAMAAAAYAAMAAQABAAAAAAAYAAQAAQABAAAAAAAYAAUAAQABAAAAAAAYAAYAAQABAAAAAAAYAAcAAQABAAEAAAAYAAoAAQABAAMAAAAYAAsAAQABAAAAAAAYAAwAAQABAAAAAAAYAA0AAQABAAAAAAAYAA4AAQABAAAAAAAYAA8AAQABAAEAAAAZAAIAAQABAAMAAAAZAAMAAQABAAAAAAAZAAQAAQABAAAAAAAZAAUAAQABAAAAAAAZAAYAAQABAAAAAAAZAAcAAQABAAEAAAAZAAoAAQABAAMAAAAZAAsAAQABAAAAAAAZAAwAAQABAAAAAAAZAA0AAQABAAAAAAAZAA4AAQABAAAAAAAZAA8AAQABAAEAAAAaAAIAAQABAAMAAAAaAAMAAQABAAAAAAAaAAQAAQABAAAAAAAaAAUAAQABAAAAAAAaAAYAAQABAAAAAAAaAAcAAQABAAEAAAAaAAoAAQABAAMAAAAaAAsAAQABAAAAAAAaAAwAAQABAAAAAAAaAA0AAQABAAAAAAAaAA4AAQABAAAAAAAaAA8AAQABAAEAAAAbAAIAAQAEAAEAAAAbAAMAAQAAAAIAAAAbAAQAAQAAAAIAAAAbAAUAAQAAAAIAAAAbAAYAAQAAAAIAAAAbAAcAAQAEAAIAAAAbAAoAAQAEAAEAAAAbAAsAAQAAAAIAAAAbAAwAAQAAAAIAAAAbAA0AAQAAAAIAAAAbAA4AAQAAAAIAAAAbAA8AAQAEAAIAAAA=")
tile_set = SubResource("TileSet_eibdt")

[node name="Parcela1" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela1"]
offset_left = 30.0
offset_top = 126.999985
offset_right = 313.0
offset_bottom = 170.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela1"]
offset_left = 47.058823
offset_top = 54.32595
offset_right = 98.03923
offset_bottom = 107.64586
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela1"]
offset_left = 47.058823
offset_top = 39.23541
offset_right = 175.05882
offset_bottom = 167.23541
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela1"]
offset_left = 30.065365
offset_top = 42.25352
offset_right = 313.06537
offset_bottom = 85.253525
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela1"]
position = Vector2(74.50981, 82.49497)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela1/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela2" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 2

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela2"]
offset_left = 138.99998
offset_top = 128.0
offset_right = 422.0
offset_bottom = 171.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela2"]
offset_left = 158.16994
offset_top = 54.325943
offset_right = 209.15034
offset_bottom = 107.64586
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela2"]
offset_left = 162.0915
offset_top = 39.235405
offset_right = 290.0915
offset_bottom = 167.23541
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela2"]
offset_left = 139.86928
offset_top = 41.247482
offset_right = 422.86926
offset_bottom = 84.24748
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela2"]
position = Vector2(185.62093, 82.494965)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela2/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela3" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 3

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela3"]
offset_left = 253.00002
offset_top = 128.00002
offset_right = 536.0
offset_bottom = 171.00002
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela3"]
offset_left = 271.89545
offset_top = 54.325943
offset_right = 322.87585
offset_bottom = 107.64586
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela3"]
offset_left = 278.4314
offset_top = 39.235405
offset_right = 406.4314
offset_bottom = 167.23541
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela3"]
offset_left = 256.20917
offset_top = 41.247482
offset_right = 539.20917
offset_bottom = 84.24748
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela3"]
position = Vector2(299.34644, 82.494965)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela3/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela4" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 4

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela4"]
offset_left = 365.0
offset_top = 128.0
offset_right = 648.0
offset_bottom = 171.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela4"]
offset_left = 383.0066
offset_top = 55.331978
offset_right = 433.987
offset_bottom = 108.651886
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela4"]
offset_left = 386.92816
offset_top = 39.235405
offset_right = 514.92816
offset_bottom = 167.23541
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela4"]
offset_left = 367.32025
offset_top = 41.247482
offset_right = 650.32025
offset_bottom = 84.24748
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela4"]
position = Vector2(410.45752, 83.50101)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela4/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela5" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 5

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela5"]
offset_left = 29.0
offset_top = 254.0
offset_right = 312.0
offset_bottom = 297.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela5"]
offset_left = 47.058823
offset_top = 183.09857
offset_right = 98.03923
offset_bottom = 236.41849
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela5"]
offset_left = 47.058823
offset_top = 165.99596
offset_right = 175.05882
offset_bottom = 293.99597
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela5"]
offset_left = 31.372547
offset_top = 175.0503
offset_right = 314.37256
offset_bottom = 218.0503
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela5"]
position = Vector2(74.509796, 211.26761)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela5/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela6" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 6

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela6"]
offset_left = 140.0
offset_top = 253.99998
offset_right = 423.00003
offset_bottom = 297.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela6"]
offset_left = 159.47713
offset_top = 183.09857
offset_right = 210.45753
offset_bottom = 236.41849
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela6"]
offset_left = 163.3987
offset_top = 165.99594
offset_right = 291.39868
offset_bottom = 293.99597
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela6"]
offset_left = 141.17648
offset_top = 175.0503
offset_right = 424.17648
offset_bottom = 218.0503
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela6"]
position = Vector2(186.9281, 211.26761)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela6/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela7" type="Node2D" parent="Foreground"]
script = ExtResource("3_np2xp")
parcela_id = 7

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela7"]
offset_left = 252.00002
offset_top = 253.99998
offset_right = 535.0
offset_bottom = 297.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela7"]
offset_left = 270.58826
offset_top = 182.09254
offset_right = 321.56866
offset_bottom = 235.41246
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela7"]
offset_left = 278.4314
offset_top = 165.99594
offset_right = 406.4314
offset_bottom = 293.99597
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela7"]
offset_left = 254.90196
offset_top = 175.0503
offset_right = 537.902
offset_bottom = 218.0503
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela7"]
position = Vector2(298.0392, 210.26157)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela7/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Parcela8" type="Node2D" parent="Foreground"]
position = Vector2(7, 6)
script = ExtResource("3_np2xp")
parcela_id = 8

[node name="Barradeagua" type="TextureProgressBar" parent="Foreground/Parcela8"]
offset_left = 356.0
offset_top = 248.99998
offset_right = 639.0
offset_bottom = 292.0
scale = Vector2(0.3137412, 0.31502637)
value = 50.0
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("5_6q3n4")
metadata/_edit_use_anchors_ = true

[node name="PlantVisualSprite2D" type="TextureRect" parent="Foreground/Parcela8"]
offset_left = 376.00656
offset_top = 176.09254
offset_right = 426.98697
offset_bottom = 229.41246
expand_mode = 4

[node name="Plaga" type="TextureRect" parent="Foreground/Parcela8"]
offset_left = 381.23532
offset_top = 159.99596
offset_right = 509.23532
offset_bottom = 287.99597
scale = Vector2(0.3, 0.2)
texture = ExtResource("6_4c2oa")

[node name="Vida" type="TextureProgressBar" parent="Foreground/Parcela8"]
offset_left = 360.32028
offset_top = 168.04425
offset_right = 643.3203
offset_bottom = 211.04425
rotation = 1.5707964
scale = Vector2(0.25, 0.25)
value = 100.0
fill_mode = 1
texture_under = ExtResource("4_w7jjh")
texture_progress = ExtResource("6_6q3n4")

[node name="Area2D" type="Area2D" parent="Foreground/Parcela8"]
position = Vector2(403.45752, 204.26157)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foreground/Parcela8/Area2D"]
position = Vector2(-2.61438, -2.0120697)
scale = Vector2(1, 0.99999964)
shape = SubResource("RectangleShape2D_np2xp")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Logica" type="Node2D" parent="."]
script = ExtResource("6_w7jjh")

[connection signal="fin_de_juego" from="Background/Barrasemanal" to="Logica" method="_on_barrasemanal_fin_de_juego"]
[connection signal="timeout" from="Timer" to="Logica" method="_on_timer_timeout"]
[connection signal="dia_actualizado" from="Logica" to="Background/Barrasemanal" method="_on_logica_dia_actualizado"]
